Thoth History
================================================================================

Version 0.1.3 (?)
  * Blog posts are now marked up using the hAtom microformat.
  * Thoth now auto-generates an XML sitemap at http://yourblog.com/sitemap
    (set site.enable_sitemap to false to disable).
  * Fixed a bug that prevented Atom and RSS feeds from being cached when
    server-side caching was enabled.
  * Fixed entry titles in Atom feeds claiming to be type="html" when in fact
    they weren't.

Version 0.1.2 (2008-03-22)
  * Added MinifyController to minify JavaScript and CSS on the fly.
  * Bumped Ramaze dependency to 0.3.9.1 to chase some important bug fixes.

Version 0.1.1 (2008-03-17)
  * First release.